Dodanie zarzadania naszymi kursami, operuje to na plikach .txt

--- a/BusinessLogic/CMakeLists.txt
+++ b/BusinessLogic/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(BusinessLogic SHARED
   user.h user.cpp
   admin.h admin.cpp
   student.h student.cpp
+  coursemanager.h coursemanager.cpp
 
 
 )
