Dodalem kod dla StudentWindow, nanioslem lekkie poprawki w kodzie CourseManager aby dzialalo, lekkie zmiany tez w expcetions, wszystko dziala jak nalezy

--- a/BusinessLogic/CMakeLists.txt
+++ b/BusinessLogic/CMakeLists.txt
@@ -11,13 +11,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
 add_library(BusinessLogic SHARED
   BusinessLogic_global.h
-  course.h course.cpp
-  exceptions.h exceptions.cpp
   user.h user.cpp
   admin.h admin.cpp
   student.h student.cpp
+  exceptions.h exceptions.cpp
+  course.h course.cpp
   coursemanager.h coursemanager.cpp
 
 
@@ -25,4 +27,9 @@ add_library(BusinessLogic SHARED
 
 target_link_libraries(BusinessLogic PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 
-target_compile_definitions(BusinessLogic PRIVATE BUSINESSLOGIC_LIBRARY)
+target_compile_definitions(BusinessLogic PUBLIC BUSINESSLOGIC_LIBRARY=1)
+
+target_include_directories(BusinessLogic PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
+)
